# DeployWizard

./: LICENSE  pyproject.toml  requirements-test.txt
.github/workflows/: tests.yml
deploywizard/: __init__.py  cli.py  pyproject.toml
deploywizard/scaffolder/: api_generator.py  docker_generator.py  model_registry.py
deploywizard/templates/: Dockerfile.tpl  docker-compose.tpl
sklearn-init-api-test/: README.md
tests/: conftest.py  test_api_generator.py  test_cli_commands.py  test_docker_generator.py  test_model_loader.py  test_model_registry.py  test_readme_examples.py  test_scaffolder.py
