[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploywizard"
version = "0.3.0.0"
description = "A CLI tool for deploying ML models as production-ready REST APIs"
readme = "README.md"
authors = [
    {name = "Hemant Sirsat", email = "hemantsirsat40@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn>=0.24.0,<0.25.0",
    "pydantic>=2.4.2,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "joblib>=1.3.2,<2.0.0",
    "numpy>=1.24.3,<2.0.0",
    "torch>=2.1.0,<2.2.0",
    "scikit-learn>=1.3.0,<1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=24.3.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "mypy>=1.8.0,<2.0.0",
    "flake8>=7.0.0,<8.0.0",
    "types-requests>=2.31.0,<3.0.0",
]

[project.scripts]
deploywizard = "deploywizard.cli:app"

[tool.setuptools.packages.find]
include = ["deploywizard*"]

[tool.setuptools.package-data]
"deploywizard" = ["templates/*.tpl"]

[project.urls]
"Homepage" = "https://github.com/hemantsirsat/deploywizard"
"Bug Tracker" = "https://github.com/hemantsirsat/deploywizard/issues"
